--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>INGR File Format</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>ingr-site</title>
 </head>
 <body>
+<h1>INGR.io</h1>
 
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
