--- a/converter/index.html
+++ b/converter/index.html
@@ -36,7 +36,10 @@
 
       <!-- Input header -->
       <div style="background:var(--surface-2);padding:10px 16px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:12px;flex-shrink:0;">
-        <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Input</span>
+        <div style="display:flex;align-items:center;gap:8px;">
+          <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Input</span>
+          <span id="input-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
+        </div>
         <div style="display:flex;align-items:center;gap:8px;">
           <label for="file-input" class="btn-ghost"
             style="cursor:pointer;padding:5px 12px;font-size:10px;display:inline-flex;align-items:center;gap:6px;">
@@ -77,7 +80,10 @@
       <!-- Output header -->
       <div style="background:var(--surface-2);padding:10px 16px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px;flex-shrink:0;">
         <div style="display:flex;align-items:center;gap:16px;">
-          <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Output</span>
+          <div style="display:flex;align-items:center;gap:8px;">
+            <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Output</span>
+            <span id="output-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
+          </div>
           <label style="display:flex;align-items:center;gap:6px;cursor:pointer;font-size:10px;">
             <input id="output-delimiter" type="checkbox"
               style="accent-color:var(--accent);width:12px;height:12px;cursor:pointer;" />
