--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
     <!-- Input -->
     <div>
-      <div style="background:var(--surface-2);padding:10px 14px;border-bottom:1px solid var(--border);display:flex;align-items:center;">
+      <div style="background:var(--surface-2);padding:10px 14px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:8px;">
         <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Input</span>
+        <span id="hero-input-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
       </div>
       <div id="hero-tabs" class="format-tabs" style="background:var(--surface);"></div>
       <textarea id="hero-input" class="code-area" rows="12"
@@ -83,7 +84,10 @@
     <!-- Output -->
     <div>
       <div style="background:var(--surface-2);padding:10px 14px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;">
-        <span style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);">.ingr output</span>
+        <div style="display:flex;align-items:center;gap:8px;">
+          <span style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);">.ingr output</span>
+          <span id="hero-output-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
+        </div>
         <div style="display:flex;align-items:center;gap:12px;">
           <label style="display:flex;align-items:center;gap:6px;cursor:pointer;">
             <input id="hero-delimiter" type="checkbox"
