Make INPUT and .INGR/OUTPUT bold

--- a/converter/index.html
+++ b/converter/index.html
@@ -37,7 +37,7 @@
       <!-- Input header -->
       <div style="background:var(--surface-2);padding:10px 16px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:12px;flex-shrink:0;">
         <div style="display:flex;align-items:center;gap:8px;">
-          <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Input</span>
+          <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);font-weight:700;"><b>Input</b></span>
           <span id="input-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
         </div>
         <div style="display:flex;align-items:center;gap:8px;">
@@ -81,7 +81,7 @@
       <div style="background:var(--surface-2);padding:10px 16px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px;flex-shrink:0;">
         <div style="display:flex;align-items:center;gap:16px;">
           <div style="display:flex;align-items:center;gap:8px;">
-            <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Output</span>
+            <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);font-weight:700;"><b>Output</b></span>
             <span id="output-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
           </div>
           <label style="display:flex;align-items:center;gap:6px;cursor:pointer;font-size:10px;">
