--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Input -->
     <div>
       <div style="background:var(--surface-2);padding:10px 14px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:8px;">
-        <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);">Input</span>
+        <span style="font-family:var(--font-mono);font-size:10px;text-transform:uppercase;letter-spacing:0.1em;color:var(--text-muted);font-weight:700;"><b>Input</b></span>
         <span id="hero-input-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
       </div>
       <div id="hero-tabs" class="format-tabs" style="background:var(--surface);"></div>
@@ -85,7 +85,7 @@
     <div>
       <div style="background:var(--surface-2);padding:10px 14px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;">
         <div style="display:flex;align-items:center;gap:8px;">
-          <span style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);">.ingr output</span>
+          <span style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);"><b>.INGR</b> output</span>
           <span id="hero-output-size" style="font-family:var(--font-mono);font-size:10px;color:var(--text-muted);font-style:italic;"></span>
         </div>
         <div style="display:flex;align-items:center;gap:12px;">
